tests/ui/panic-handler/panic-handler-duplicate.stderr
error: multiple implementations of `#[panic_handler]`
  --> $DIR/panic-handler-duplicate.rs:10:1
   |
LL | fn panic(info: &PanicInfo) -> ! {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ first implemented here in crate `panic_handler_duplicate`
...
LL | fn panic2(info: &PanicInfo) -> ! {
   | -------------------------------- also implemented here in crate `panic_handler_duplicate`
   |
   = help: an "externally implementable item" can only have a single implementation in the final artifact. When multiple implementations are found, also in different crates, they conflict

error: aborting due to 1 previous error

